--- a/.github/workflows/publish-eitriapp.yaml
+++ b/.github/workflows/publish-eitriapp.yaml
@@ -66,7 +66,7 @@ jobs:
               echo "Versão encontrada: $VERSION"
       
               echo "Executando eitri push-version..."
-              eitri push-version
+              eitri push-version --shared
       
               echo "Publicando com eitri publish..."
               eitri publish -e $ENVIRONMENT_ID
